--- a/index.html
+++ b/index.html
@@ -11,16 +11,26 @@
         <link rel="stylesheet" href="./assets/css/style.css">
         <!-- bootstrap style -->
         <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+        <!-- bootstrap icon -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     </head>
 
     <body>
 
         <div class="home-section">
 
-            <!-- navbar -->
+            <!-- Navbar -->
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <h3>tmdash.id</h3>
+                    <a class="navbar-brand navImg" href="#">
+                        <img src="./assets/image/logo.png" alt="Bootstrap" width="30" height="auto">
+                    </a>
+                    <h4>tmdash.id</h4>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="bi bi-list"></i>
+                    </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
@@ -54,43 +64,32 @@
 
             <!-- home content -->
             <section class="home">
-                <!-- <div class="content">
-                    <h3>Premium Hijab & <br>beauty products
-                    </h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque culpa, totam sed maxime animi
-                        facilis!</p>
-                </div>
-                <div class="img">
-                    <img src="./assets/image/icon.png" alt="">
-                </div> -->
-                <div id="carouselExampleDark" class="carousel carousel-dark slide content" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
+                <div id="carouselExampleDark" class="carousel carousel-dark slide content align-items-center"
+                    data-bs-ride="carousel">
+                    <!-- <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
                             aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
                             aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
                             aria-label="Slide 3"></button>
-                    </div>
+                    </div> -->
                     <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="10000">
-                            <img src="./assets/image/caurosel1.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-item active" data-bs-interval="3000">
+                            <img src="./assets/image/caurosel1.jpg" class="d-block w-100 img-fluid" alt="...">
                             <div class="carousel-caption d-none d-md-block text-light">
-                                <h5>First slide label</h5>
                                 <p>Some representative placeholder content for the first slide.</p>
                             </div>
                         </div>
-                        <div class="carousel-item" data-bs-interval="10000">
-                            <img src="./assets/image/caurosel2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-item" data-bs-interval="3000">
+                            <img src="./assets/image/caurosel2.jpg" class="d-block w-100 img-fluid" alt="...">
                             <div class="carousel-caption d-none d-md-block text-light">
-                                <h5>Second slide label</h5>
                                 <p>Some representative placeholder content for the second slide.</p>
                             </div>
                         </div>
-                        <div class="carousel-item" data-bs-interval="10000">
-                            <img src="./assets/image/caurosel3.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block text-light">
-                                <h5>Third slide label</h5>
+                        <div class="carousel-item" data-bs-interval="3000">
+                            <img src="./assets/image/caurosel3.jpg" class="d-block w-100 img-fluid" alt="...">
+                            <div class="carousel-caption d-none d-md-block text-light ">
                                 <p>Some representative placeholder content for the third slide.</p>
                             </div>
                         </div>
@@ -216,9 +215,15 @@
                 <div class="copyright">
                     &copy; Copyright <strong>tmdash.id </strong>All Rights Reserved
                 </div>
-                <!-- <div class="credits">
-                    Designed By <a href="#">Triple_A</a>
-                </div> -->
+                <div class="credits">
+                    <ul class="list-inline">
+                        <li class="list-inline-item"><a href="https://www.instagram.com/tmdash.id/"><i
+                                    class="bi bi-instagram"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="https://www.facebook.com/tmdash.id/"><i
+                                    class="bi bi-facebook"></i></a></li>
+                    </ul>
+                </div>
             </div>
         </footer>
         <!-- footer -->
@@ -229,5 +234,14 @@
 
     <!-- Optional JavaScript -->
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+        integrity="sha384-X1nD5xuDW3+JJcuQtf4vJLjxcP5U5zdiO5qj5toefIcGr9sHQuic6uD9yZodjFQb"
+        crossorigin="anonymous"></script>
+
 
 </html>
