--- a/produk.html
+++ b/produk.html
@@ -11,14 +11,24 @@
         <link rel="stylesheet" href="./assets/css/style.css">
         <!-- bootstrap style -->
         <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+        <!-- bootstrap icon -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     </head>
 
     <body>
 
-        <!-- navbar -->
+        <!-- Navbar -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <h3>tmdash.id</h3>
+                <a class="navbar-brand navImg" href="#">
+                    <img src="./assets/image/logo.png" alt="Bootstrap" width="30" height="auto">
+                </a>
+                <h4>tmdash.id</h4>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="bi bi-list"></i>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -45,7 +55,6 @@
                             <a class="nav-link" href="contact.html">Kontak</a>
                         </li>
                     </ul>
-
                 </div>
             </div>
         </nav>
@@ -183,9 +192,15 @@
                 <div class="copyright">
                     &copy; Copyright <strong>tmdash.id </strong>All Rights Reserved
                 </div>
-                <!-- <div class="credits">
-                    Designed By <a href="#">Triple_A</a>
-                </div> -->
+                <div class="credits">
+                    <ul class="list-inline">
+                        <li class="list-inline-item"><a href="https://www.instagram.com/tmdash.id/"><i
+                                    class="bi bi-instagram"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="https://www.facebook.com/tmdash.id/"><i
+                                    class="bi bi-facebook"></i></a></li>
+                    </ul>
+                </div>
             </div>
         </footer>
         <!-- footer -->
